lattice-boltzmann/sycl/out
/nfs/software/x86_64/computecpp/1.2.0/bin/compute++ -DSYCL lbm.cpp -O2 -mllvm -inline-threshold=1000 -sycl -sycl-target spir64 -c -I/nfs/software/x86_64/computecpp/1.2.0/include -o lbm.sycl
In file included from lbm.cpp:4:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/CL/sycl.hpp:1:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/CL/../SYCL/sycl.hpp:20:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/sycl_builtins.h:27:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/cpp_to_cl_cast.h:12:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/deduce.h:25:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/cl_types.h:23:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/common.h:21:
In file included from /nfs/software/x86_64/computecpp/1.2.0/include/SYCL/include_opencl.h:34:
In file included from /nfs/software/x86_64/khronos/opencl/headers/CL/cl.h:32:
/nfs/software/x86_64/khronos/opencl/headers/CL/cl_version.h:34:9: warning: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 220 (OpenCL 2.2) [-W#pragma-messages]
#pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 220 (OpenCL 2.2)")
        ^
lbm.cpp:445:44: error: no matching constructor for initialization of 'sycl::range<1>'
          local_accessor_t local_tot_u_acc(sycl::range<1>(LOCAL_NY, LOCAL_NX), cgh);
                                           ^              ~~~~~~~~~~~~~~~~~~
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:61:3: note: candidate constructor not viable: requires single argument 'rhs', but 2 arguments were provided
  range(const range& rhs) = default;
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:66:3: note: candidate constructor not viable: requires single argument 'dim1', but 2 arguments were provided
  range(size_t dim1)
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:69:12: note: candidate constructor not viable: requires single argument 'indexArray', but 2 arguments were provided
  explicit range(
           ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:72:3: note: candidate constructor not viable: requires single argument 'indexArray', but 2 arguments were provided
  range(const detail::index_array& indexArray) : range<1>(indexArray[0]) {}
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:56:3: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
  range(void) : detail::index_array_operators<1, cl::sycl::range>(1, 1, 1) {}
  ^
lbm.cpp:517:44: error: no matching constructor for initialization of 'sycl::range<1>'
          local_accessor_t local_tot_u_acc(sycl::range<1>(LOCAL_NY, LOCAL_NX), cgh);
                                           ^              ~~~~~~~~~~~~~~~~~~
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:61:3: note: candidate constructor not viable: requires single argument 'rhs', but 2 arguments were provided
  range(const range& rhs) = default;
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:66:3: note: candidate constructor not viable: requires single argument 'dim1', but 2 arguments were provided
  range(size_t dim1)
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:69:12: note: candidate constructor not viable: requires single argument 'indexArray', but 2 arguments were provided
  explicit range(
           ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:72:3: note: candidate constructor not viable: requires single argument 'indexArray', but 2 arguments were provided
  range(const detail::index_array& indexArray) : range<1>(indexArray[0]) {}
  ^
/nfs/software/x86_64/computecpp/1.2.0/include/SYCL/range.h:56:3: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
  range(void) : detail::index_array_operators<1, cl::sycl::range>(1, 1, 1) {}
  ^
1 warning and 2 errors generated.
make: *** [lbm.sycl] Error 1
